# SecureOffice-Hub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP_REAL_APIS.md  h  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
data/demo/: demo_campaigns.json  demo_complete.json  demo_relationships.json  demo_threats.json
docker/: Dockerfile  docker-compose.yml
docs/: api_documentation.md  architecture.md
github/workflows/: ci.yml
scripts/: benchmark.py  demo_data.py  import_feeds.py  setup_db.py
src/: __init__.py
src/ai/: analyzer.py  cache.py  prompts.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py  models.py
src/api/routes/: __init__.py  analysis.py  search.py  threats.py
src/collectors/: __init__.py  abuseipdb.py  base.py  otx.py  phishtank.py  urlhaus.py
src/config/: __init.py  prompts_templates.py  settings.py
src/core/: __init__.py  bloom_filter.py  domain_trie.py  merkle_tree.py  priority_queue.py  threat_graph.py
src/dashboard/: __init__.py  app.py
src/dashboard/components/: graph_visualizer.py  risk_meter.py  threat_card.py
src/dashboard/pages/: _settings.py  _step_analysis.py  _threat_graph.py
src/dashboard/utils/: charts.py  formatters.py
src/database/: __init__.py  connection.py  models.py
src/utils/: __init__.py  constants.py  formatters.py  logging.py  pdf_generator.py  validators.py
tests/: __init__.py  test_ai_analyzer.py  test_api.py  test_bloom_filter.py  test_graph.py
tests/fixtures/: mock_responses.py  sample_threats.json
